# fear-engine

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  premake5.lua
.github/workflows/: blank.yml
configs/: logs.json
include/: CMakeLists.txt
include/GLFW/: CMakeLists.txt  cmake_uninstall.cmake.in  premake5.lua
include/containers/: slot_map.h
include/entt/: premake5.lua
include/glad/: CMakeLists.txt  premake5.lua
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
include/glm/: CMakeLists.txt  premake5.lua
include/imgui/: CMakeLists.txt  imgui.h  imgui_impl_glfw.cpp  premake5.lua
include/tinyobj/: tinyobj_loader_opt.cpp  tinyobj_loader_opt.h
scripts/: Win-Clean.bat  Win-GenProjects.bat  Win-GenProjects19.bat  Win-GenProjects22.bat
src/: CMakeLists.txt  Processes.cpp  Processes.m.cpp  events.hpp
src/GUI/: GUI.cpp  GUI.hpp  guiValues.hpp
src/GUI/windows/: BottomPanel.cpp  BottomPanel.hpp  DockingArea.cpp  DockingArea.hpp  GuiWindow.hpp  HelpWindow.cpp  HelpWindow.hpp  HierarchyWindow.cpp  HierarchyWindow.hpp  InspectorWindow.cpp  InspectorWindow.hpp  ProjectWindow.cpp  ProjectWindow.hpp  SceneWindow.cpp  SceneWindow.hpp
src/cache/: CacheManager.cpp  CacheManager.hpp  ErrorCodes.hpp  ImageResource.hpp  Loader.hpp  LoadersFlags.hpp  MaterialResource.cpp  MaterialResource.hpp  ObjResource.hpp  Resource.cpp  Resource.hpp
src/cache/Loaders/: ImageLoader.cpp  ImageLoader.hpp  ObjLoader.cpp  ObjLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
src/components/: Base.cpp  Base.hpp  CameraComponent.cpp  CameraComponent.hpp  Entity_impl.cpp  Entity_impl.hpp  MaterialComponent.hpp
src/core/: Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  Scene.cpp  Scene.hpp  Window.cpp  Window.hpp  events.hpp
src/editor/: Editor.cpp  Editor.hpp
src/editor/windows/: BottomPanel.cpp  BottomPanel.hpp  DockingArea.cpp  DockingArea.hpp  GuiWindow.hpp  HelpWindow.cpp  HelpWindow.hpp  HierarchyWindow.cpp  HierarchyWindow.hpp  InspectorWindow.cpp  InspectorWindow.hpp  ProjectWindow.cpp  ProjectWindow.hpp  SceneWindow.cpp  SceneWindow.hpp  ViewPort.cpp  ViewPort.hpp
src/event/: CoreEvent.cpp  CoreEvent.hpp  Dispatcher.cpp  Dispatcher.hpp  EntityEvent.cpp  EntityEvent.hpp  Event.cpp  Event.hpp  GuiEvent.cpp  GuiEvent.hpp  GuiUpdate.cpp  KeyEvent.cpp  KeyEvent.hpp  MouseCodes.hpp  MouseEvent.cpp  MouseEvent.hpp  NamedEvent.hpp  Observer.hpp  WindowEvent.cpp  WindowEvent.hpp  keyCodes.hpp
src/event/detail/: Delegate.hpp
src/render/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  DebugNormalLayer.cpp  DebugNormalLayer.hpp  Draws.cpp  Draws.hpp  EditorModelLayer.cpp  EditorModelLayer.hpp  ErrorCodes.hpp  FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Layer.cpp  Layer.hpp  LightPass.cpp  LightPass.hpp  ModelLayer.cpp  ModelLayer.hpp  ObjLayer.cpp  ObjLayer.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  TextureBuffer.cpp  TextureBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/render/shader/: Shader.cpp  Shader.hpp  Uniform.cpp  Uniform.hpp  UniformTypes.hpp
src/utils/: PointerCasts.hpp  StringUtils.cpp  StringUtils.hpp
(+28 files in other folders)
